2004-02-17  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c : Allow multiple genders attributes to be
	passed to -g and -X, either via comma-separated list or multiple 
	invocations of these options.

	* src/modules/nodeattr.c : Same.

	* src/modules/sdr.c : Truncate domain part of hostnames. 

2004-02-12  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/mod.c : Modules now optionally export pdsh_module_priority 
	which affects sorting in the list of loaded modules. This can be used 
	to ensure that some modules interfaces are called after others.

	* src/modules/ : add pdsh_module_priority to existing modules.

	* src/modules/genders.c : Added -X option. Changed behavior of -i 
	such that it always translates between altnames to canonical names.

	* config/ac_static_modules.m4 : Place static_modules.h in top level
	builddir -- src/modules might not exist at time configure is run.

	* src/modules/Makefile.am : Be sure to include QSW libs in libmods
	when compiling with static modules.

	* src/qsnet/elanhosts.c, src/qsnet/qswutil.c : Improve error message
	when hostname not found in /etc/elanhosts.

2004-02-11  Mark Grondona <mgrondona@llnl.gov>

	* : Added "slurm" module to support running under SLURM allocations.

	* config/ac_slurm.m4, src/modules/slurm.c : Added.

	* src/modules/Makefile.am, configure.ac: Support new slurm module.

2004-02-10  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_rsh.m4 : added file.
	
	* configure.ac, config/ac_static_modules.m4, src/modules/Makefile.am : 
	Don't unconditionally include BSD rsh module.

	* src/common/hostlist.c : Update to lastest for lsd-tools.

	* src/pdsh/mod.c : Workaround glibc <= 2.2.4 dl.so bug (gnats:322)

	* src/pdsh/dsh.c (_int_handler) : Sanity check for NULL thread
	info array before attempting to print stats.

2003-12-30  Albert Chu <chu11@llnl.gov>

	* README.modules: Removed mrshd package requirement.

2003-12-22  Albert Chu <chu11@llnl.gov>
